--- a/views/layouts/includes/header-admin.pug
+++ b/views/layouts/includes/header-admin.pug
@@ -1,59 +1,56 @@
-header(class="bg-red-700 shadow-xl")
-  div(class="flex items-center justify-between md:flex-col lg:flex-row")
-    a(href="#" class="py-10 cssanimation effect3d")
-      h2.text-white.text-2xl.ml-10 Micr🍎
-        span.text-white Tech 
-        span.text-gray-400 RD
-      
-    //- Botón para Menú Hamburguesa (visible solo en pantallas pequeñas)
-    div(class="md:hidden flex items-center mr-4")
-      button(type="button" id="mobile-menu-toggle" class="text-white focus:outline-none transition-all duration-300")
-        i(class="fa fa-bars text-2xl", id="hamburger-icon")
+header(class="bg-red-800 fixed top-0 left-0 w-full p-8 flex justify-between items-center z-50")
+  a(href="#" class="cssanimation effect3d")
+    h1.text-white.text-xl.ml-10 Micr🍎
+      span.text-white Tech 
+      span.text-gray-400 RD
+  button(id="menu-btn" class="lg:hidden mr-5")
+    svg( id="hamburger-icon"
+      class="w-8 h-8 block"
+      fill="none"
+      stroke="white"
+      stroke-width="2"
+      viewBox="0 0 24 24"
+      xmlns="http://www.w3.org/2000/svg")
+      path(stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16")
+    svg(id="close-icon"
+      class="w-8 h-8 hidden"
+      fill="none"
+      stroke="white"
+      stroke-width="2"
+      viewBox="0 0 24 24"
+      xmlns="http://www.w3.org/2000/svg")
+      path(stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12")
 
-    //- Menú principal (visible en pantallas medianas y grandes)
-    nav(class="font-semibold md:flex items-center justify-center px-12 mx-12 gap-10 hidden " id="main-menu")
-      a(href="#" class="text-white hover:text-[#44556a7d] hover:border-b-2 rounded-sm hover:border-red-300 transition ease-in-out duration-200") Inicio
-      a(href="#" class="text-white hover:text-[#44556a7d] hover:border-b-2 hover:border-red-300 transition ease-in-out duration-200") Facturación
-      
-      //- Reparación Desplegable (versión escritorio)
-      div(class="relative" id="repair-menu-container")
-        a(href="javascript:void(0);" class="text-white hover:text-[#44556a7d] hover:border-b-2 hover:border-red-300 transition ease-in-out duration-200 flex items-center" id="repair-menu-toggle")
-          span Reparación
-          i(class="fa fa-chevron-down ml-2 transition-transform duration-300", id="repair-arrow") 
-        ul(class="absolute hidden bg-gradient-to-t from-[#ffe9ed] to-[#ffffff] shadow-md rounded mt-2 w-64" id="repair-menu")
-          li
-            a(href="#" class="block px-4 py-2 text-gray-500 hover:bg-gray-100") Crear Orden Reparación 
-          li
-            a(href="#" class="block px-4 py-2 text-gray-500 hover:bg-gray-100") Estado Reparación
-          
-      a(href="#" class="text-white hover:text-[#44556a7d] hover:border-b-2 hover:border-red-300 transition ease-in-out duration-200") Servicios
 
-    //- Perfil y Cerrar Sesión (visible en pantallas medianas y grandes)
-    div(class="hidden md:flex items-center font-bold justify-end gap-6 mr-12 px-4")
-      a(href="#" class="flex items-center space-x-2 text-white text-sm md:text-base") 
-        span José Guichardo
-        i(class="fa-solid fa-user pl-1 text-lg")
-        
-      a(href="#" class="text-gray-100 bg-red-400 hover:bg-red-700 py-2 px-4 text-xs md:text-sm sm:text-sm rounded-lg") Cerrar Sesión
 
-//- Menú móvil que aparece cuando se hace clic en el ícono de menú hamburguesa
-div(class="hidden flex items-center flex-col justify-center md:hidden bg-white w-full py-2 shadow-lg" id="mobile-menu")
-  a(href="#" class="block px-4 py-2 text-gray-600 hover:bg-gray-100") Inicio
-  a(href="#" class="block px-4 py-2 text-gray-600 hover:bg-gray-100") Facturación
-  
-  //- Reparación Desplegable (versión móvil)
-  div(class="relative mr-10")
-    a(href="#" class="block px-4 py-2 text-gray-600 hover:bg-gray-100 flex items-center" id="mobile-repair-menu-toggle")
-      span Reparación
-      i(class="fa fa-chevron-down ml-2 transition-transform duration-300", id="mobile-repair-arrow")
-    ul(class="hidden bg-gradient-to-t from-[#ffe9ed] to-[#ffffff] shadow-md rounded mt-2 w-full" id="mobile-repair-menu")
-      li
-        a(href="#" class="block px-4 py-2 text-gray-500 hover:bg-gray-100") Crear Orden Reparación 
-      li
-        a(href="#" class="block px-4 py-2 text-gray-500 hover:bg-gray-100") Estado Reparación
 
-  a(href="#" class="block px-4 py-2 text-gray-600 hover:bg-gray-100") Servicios
-  a(href="#" class="block px-4 py-2 text-gray-100 bg-red-400 hover:bg-red-700 rounded-lg mt-4") Cerrar Sesión
 
-block scripts 
-  script(src="/js/desplegable.js")
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//- header(class="bg-red-700 shadow-xl")
+//-   div(class="flex items-center justify-between md:flex-col lg:flex-row")
+//-     a(href="#" class="py-10 cssanimation effect3d")
+//-       h2.text-white.text-2xl.ml-10 Micr🍎
+//-         span.text-white Tech 
+//-         span.text-gray-400 RD
