--- a/views/layouts/includes/header-admin.pug
+++ b/views/layouts/includes/header-admin.pug
@@ -1,5 +1,5 @@
 header(class="bg-red-800 fixed top-0 left-0 w-full p-8 flex justify-between items-center z-50")
-  a(href="#" class="cssanimation effect3d")
+  a(href="/home-repairs" class="cssanimation effect3d")
     h1.text-white.text-xl.ml-10 Micr🍎
       span.text-white Tech 
       span.text-gray-400 RD
