--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -1,30 +1,29 @@
 extends ../layouts/index
 
-block contenido
-   div(class="max-w-sm md:max-w-xl mx-auto flex flex-col mt-16 md:mt-40")
+block content
+  div(class="max-w-sm md:max-w-xl mx-auto flex flex-col mt-16 md:mt-40")
     h1(class="text-center text-white text-xl  md:text-3xl font-bold border-red-300 cssanimation hu__hu__")=page
     if errores 
       div(id="errores" class="text-center rounded-md mt-10")
-         each error in errores 
-            p(class="text-white bg-red-600 my-2 text-center text-sm md:text-lg py-2 rounded-lg")=error.msg
+        each error in errores 
+          p(class="text-white bg-red-600 my-2 text-center text-sm md:text-lg py-2 rounded-lg")=error.msg
 
 
     div(class="shadow-2xl rounded-md w-full px-2 mt-10")
-      form(action="" method="" class="space-y-6")
-         input(type="hidden" name="_csrf" value=csrfToken)
-       
-         div
-            label(for="password" class="block text-gray-50 text-sm md:text-xl my-2 font-bold") Contraseña 
-            input(type="password" name="password" id="password" class="w-full mb-2 p-2 bg-gray-50 border focus:border-red-300 outline-none placeholder-gray-400 focus:bg-gray-50 rounded-lg" placeholder="Contraseña" )
-         div
-            label(for="confirm-password" class="block text-gray-50 text-sm md:text-xl my-2 font-bold") Confirmar Contraseña 
-            input(type="confirm-password" name="confirm-password" id="confirm-password" class="w-full mb-2 p-2 bg-gray-50 border focus:border-red-300 outline-none placeholder-gray-400 focus:bg-gray-50 rounded-lg" placeholder="Confirmar Contraseña" )
+      form(action=`/auth/reset-password/${user.token}` method="POST" class="space-y-6")
+        input(type="hidden" name="_csrf" value=csrfToken)
 
-         div(class="flex justify-center text-center py-5 ")
-            button(type="submit" class="flex justify-center items-center cursor-pointer bg-red-700 hover:bg-gray-700 text-white text-sm md:text-xl p-2 w-72 rounded-lg shadow-lg hover:shadow-red-700 hover:scale-90 transition-all duration-300 ") Recuperar Contraseña
-               i(class='bx bx-send text-white pl-2')
-               
-        
-      
+        div
+          label(for="password" class="block text-gray-50 text-sm md:text-xl my-2 font-bold") Contraseña 
+          input(type="password" name="password" id="password" class="w-full mb-2 p-2 bg-gray-50 border focus:border-red-300 outline-none placeholder-gray-400 focus:bg-gray-50 rounded-lg" placeholder="Contraseña" )
+        div
+          label(for="confirm_password" class="block text-gray-50 text-sm md:text-xl my-2 font-bold") Confirmar Contraseña 
+          input(type="password" name="confirm_password" id="confirm_password" class="w-full mb-2 p-2 bg-gray-50 border focus:border-red-300 outline-none placeholder-gray-400 focus:bg-gray-50 rounded-lg" placeholder="Confirmar Contraseña" )
 
-    
+        div(class="flex justify-center text-center py-5 ")
+          button(type="submit" class="flex justify-center items-center cursor-pointer bg-red-700 hover:bg-gray-700 text-white text-sm md:text-xl p-2 w-72 rounded-lg shadow-lg hover:shadow-red-700 hover:scale-90 transition-all duration-300 ") Recuperar Contraseña
+            i(class='bx bx-send text-white pl-2')
+
+
+
+
