--- a/views/template/mensaje.pug
+++ b/views/template/mensaje.pug
@@ -1,9 +1,9 @@
 extends ../layouts/index
 
-block contenido 
- 
- div.mt-32.max-w-4xl.mx-auto
-   h3(class="text-2xl py-2 font-bold text-center text-white")=page 
-    p(class="text-center bg-red-500 text-white rounded-lg my-5 p-2")=mensaje
+block content 
 
-    a(class="block hover:bg-gray-700 text-white w-1/2 mx-auto rounded-lg my-5 p-3 text-center hover:outline hover:outline-offset-2 hover:outline-2 hover:scale-90 outline-red-500 shadow-lg transition-all duration-300 " href="/auth/login") Volver al Login
+  div.mt-32.max-w-4xl.mx-auto
+    h3(class="text-2xl py-2 font-bold text-center text-white")=page 
+      p(class=success ? "bg-green-700" : "bg-red-600").text-center.text-white.rounded-lg.my-5.p-2=mensaje
+
+      a(class= "block hover:bg-gray-700 text-white w-1/2 mx-auto rounded-lg my-5 p-3 text-center hover:outline hover:outline-offset-2 hover:outline-2 hover:scale-90 outline-red-500 shadow-lg transition-all duration-300 " href="/auth/login") Volver al Login
