Agregando alert con SweetAlert, editando los registro de clientes

--- a/views/layouts/admin.pug
+++ b/views/layouts/admin.pug
@@ -27,3 +27,4 @@ html(lang="en")
       script(src="/js/sidebar.js")
       script(src="/js/formatPhone.js")
       script(src="/js/countTextArea.js")
+      script(src="/js/sweetAlert.js")
