--- a/views/template/message-index.pug
+++ b/views/template/message-index.pug
@@ -4,6 +4,6 @@ block content
 
   div.mt-32.max-w-4xl.mx-auto
     h3(class="text-2xl py-2 font-bold text-center text-white")=page 
-      p(class=success ? "bg-green-700" : "bg-red-600").text-center.text-white.rounded-lg.my-5.p-2=mensaje
+      p(class=success ? "bg-green-700" : "bg-red-600").text-center.text-white.rounded-lg.my-5.p-2=message
 
       a(class= "block hover:bg-gray-700 text-white w-1/2 mx-auto rounded-lg my-5 p-3 text-center hover:outline hover:outline-offset-2 hover:outline-2 hover:scale-90 outline-red-500 shadow-lg transition-all duration-300 " href="/auth/login") Volver al Login
