Arreglando diseño de login

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,7 +1,7 @@
 extends ../layouts/index
 
 block content
-  div(class="max-w-sm md:max-w-xl mx-auto flex flex-col mt-16 md:mt-40")
+  div(class=" w-full max-w-xl mx-auto flex flex-col mt-16 md:mt-40")
     h1(class="text-center text-white text-xl  md:text-3xl font-bold border-red-300 cssanimation hu__hu__")=page
     if errores 
       div(id="errores" class="text-center rounded-md mt-10")
@@ -9,11 +9,11 @@ block content
           p(class="text-white bg-red-600 my-2 text-center text-sm md:text-lg py-2 rounded-lg")=error.msg
 
 
-    div(class="shadow-2xl rounded-md w-full px-2 mt-10")
-      form(action="/auth/login" method="POST" class="space-y-2")
+    div(class="shadow-2xl rounded-md px-2 mt-10")
+      form(action="/auth/login" method="POST" class="space-y-2 max-w-lg  mx-auto")
         input(type="hidden" name="_csrf" value=csrfToken)
         div
-          label(for="identificar" class="block text-gray-50 text-sm md:text-xl py-5 font-bold") Email / Usuario 
+          label(for="identificar" class="block text-gray-50 text-sm md:text-xl py-5 font-bold mt-10") Email / Usuario 
           input(type="text" id="identificar" name="identificar" class="w-full mb-2 p-2 bg-gray-50 outline-none placeholder-gray-400  border focus:border-red-300 rounded-lg" placeholder="Email o Usuario" value=user ? user.identificar : '') 
         div
           label(for="password" class="block text-gray-50 text-sm md:text-xl my-2 font-bold") Contraseña 
