--- a/public/css/app.css
+++ b/public/css/app.css
@@ -609,11 +609,6 @@ video {
   bottom: 0px;
 }
 
-.inset-x-80 {
-  left: 20rem;
-  right: 20rem;
-}
-
 .bottom-12 {
   bottom: 3rem;
 }
@@ -634,100 +629,8 @@ video {
   top: 0px;
 }
 
-.right-0 {
-  right: 0px;
-}
-
-.left-5 {
-  left: 1.25rem;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.bottom-1 {
-  bottom: 0.25rem;
-}
-
-.bottom-\[10px\] {
-  bottom: 10px;
-}
-
-.bottom-\[5px\] {
-  bottom: 5px;
-}
-
-.bottom-\[-10px\] {
-  bottom: -10px;
-}
-
-.bottom-\[-5px\] {
-  bottom: -5px;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
-.left-28 {
-  left: 7rem;
-}
-
-.left-\[-0px\] {
-  left: -0px;
-}
-
-.left-48 {
-  left: 12rem;
-}
-
-.left-72 {
-  left: 18rem;
-}
-
-.left-96 {
-  left: 24rem;
-}
-
-.left-80 {
-  left: 20rem;
-}
-
-.left-\[34\%\] {
-  left: 34%;
-}
-
-.left-\[50\%\] {
-  left: 50%;
-}
-
-.left-\[96px\] {
-  left: 96px;
-}
-
-.left-\[250px\] {
-  left: 250px;
-}
-
-.bottom-8 {
-  bottom: 2rem;
+.z-30 {
+  z-index: 30;
 }
 
 .z-40 {
@@ -740,10 +643,6 @@ video {
 
 .m-0 {
   margin: 0px;
-}
-
-.m-12 {
-  margin: 3rem;
 }
 
 .mx-2 {
@@ -771,11 +670,6 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.mx-12 {
-  margin-left: 3rem;
-  margin-right: 3rem;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -796,6 +690,10 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mb-\[-6px\] {
+  margin-bottom: -6px;
+}
+
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -806,6 +704,10 @@ video {
 
 .ml-2 {
   margin-left: 0.5rem;
+}
+
+.ml-\[-30px\] {
+  margin-left: -30px;
 }
 
 .mr-14 {
@@ -852,74 +754,6 @@ video {
   margin-top: 100px;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mr-12 {
-  margin-right: 3rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
-.ml-12 {
-  margin-left: 3rem;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.ml-\[-50px\] {
-  margin-left: -50px;
-}
-
-.ml-\[-40px\] {
-  margin-left: -40px;
-}
-
-.ml-\[-30px\] {
-  margin-left: -30px;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
-.mb-\[-12px\] {
-  margin-bottom: -12px;
-}
-
-.mb-\[-10px\] {
-  margin-bottom: -10px;
-}
-
-.mb-\[-8px\] {
-  margin-bottom: -8px;
-}
-
-.mb-\[-5px\] {
-  margin-bottom: -5px;
-}
-
-.mb-\[-4px\] {
-  margin-bottom: -4px;
-}
-
-.mb-\[-6px\] {
-  margin-bottom: -6px;
-}
-
 .block {
   display: block;
 }
@@ -950,6 +784,10 @@ video {
   height: 1.5rem;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .h-5 {
   height: 1.25rem;
 }
@@ -964,6 +802,10 @@ video {
 
 .w-1\/2 {
   width: 50%;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-5 {
@@ -1027,6 +869,16 @@ video {
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
 }
 
 .cursor-pointer {
@@ -1093,12 +945,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-x-auto {
@@ -1194,6 +1040,10 @@ video {
   --tw-bg-opacity: 0.5;
 }
 
+.fill-red-600 {
+  fill: #dc2626;
+}
+
 .p-0 {
   padding: 0px;
 }
@@ -1257,25 +1107,12 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
 }
 
 .pl-4 {
   padding-left: 1rem;
-}
-
-.pr-12 {
-  padding-right: 3rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
 }
 
 .text-left {
@@ -1336,6 +1173,11 @@ video {
   font-weight: 600;
 }
 
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
@@ -1359,6 +1201,11 @@ video {
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1461,11 +1308,6 @@ video {
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-red-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
 .hover\:text-indigo-300:hover {
   --tw-text-opacity: 1;
   color: rgb(165 180 252 / var(--tw-text-opacity));
@@ -1556,14 +1398,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:left-\[-30px\] {
-    left: -30px;
-  }
-
-  .sm\:top-\[8px\] {
-    top: 8px;
-  }
-
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -1571,104 +1405,8 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:left-0 {
-    left: 0px;
-  }
-
-  .md\:bottom-0 {
-    bottom: 0px;
-  }
-
-  .md\:right-8 {
-    right: 2rem;
-  }
-
-  .md\:right-20 {
-    right: 5rem;
-  }
-
-  .md\:top-1\/2 {
-    top: 50%;
-  }
-
-  .md\:bottom-1\/2 {
-    bottom: 50%;
-  }
-
-  .md\:bottom-1\/3 {
-    bottom: 33.333333%;
-  }
-
-  .md\:bottom-1\/4 {
-    bottom: 25%;
-  }
-
-  .md\:bottom-2 {
-    bottom: 0.5rem;
-  }
-
-  .md\:bottom-4 {
-    bottom: 1rem;
-  }
-
-  .md\:bottom-auto {
-    bottom: auto;
-  }
-
-  .md\:top-1\/4 {
-    top: 25%;
-  }
-
-  .md\:top-2 {
-    top: 0.5rem;
-  }
-
-  .md\:top-3 {
-    top: 0.75rem;
-  }
-
-  .md\:top-\[15px\] {
-    top: 15px;
-  }
-
-  .md\:top-\[-15px\] {
-    top: -15px;
-  }
-
-  .md\:top-\[-5px\] {
-    top: -5px;
-  }
-
-  .md\:top-\[-10px\] {
-    top: -10px;
-  }
-
-  .md\:top-\[10px\] {
-    top: 10px;
-  }
-
-  .md\:top-\[12px\] {
-    top: 12px;
-  }
-
-  .md\:top-\[8px\] {
-    top: 8px;
-  }
-
-  .md\:left-\[10px\] {
-    left: 10px;
-  }
-
-  .md\:left-\[-10px\] {
-    left: -10px;
-  }
-
-  .md\:left-\[-20px\] {
-    left: -20px;
-  }
-
-  .md\:left-\[-30px\] {
-    left: -30px;
+  .md\:ml-48 {
+    margin-left: 12rem;
   }
 
   .md\:mt-40 {
@@ -1685,22 +1423,6 @@ video {
 
   .md\:max-w-xl {
     max-width: 36rem;
-  }
-
-  .md\:translate-y-1\/2 {
-    --tw-translate-y: 50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:translate-x-1\/2 {
-    --tw-translate-x: 50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:scale-75 {
-    --tw-scale-x: .75;
-    --tw-scale-y: .75;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .md\:flex-row {
@@ -1768,5 +1490,12 @@ video {
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark\:text-gray-600 {
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity));
   }
 }
