--- a/views/client/panel.pug
+++ b/views/client/panel.pug
@@ -5,13 +5,15 @@ block content
   div(class="max-w-7xl mx-auto")
     h1(class="md:text-4xl font-bold mb-6 text-center text-white") Panel de clientes
 
-    div(class=" mb-6")
-      form(action=`/client/search/${id}` method="GET")
-        input(type="text" id='search-input' placeholder="Buscar cliente..." class="text-gray-300 text-sm py-2 w-full outline-none max-w-md px-4 rounded-md bg-gray-700 placeholder-gray-400 focus:ring-2 focus:ring-red-600")
-        button(type="submit" class="ml-[-30px] ")
+    div(class="mb-6")
+      form(action="/client/search" method="GET")
+        input(type="text" id='search' name="search" placeholder="Buscar cliente..." class="text-gray-300 text-sm py-2 w-full outline-none max-w-md px-4 rounded-md bg-gray-700 placeholder-gray-400 focus:ring-2 focus:ring-red-600" value=search) 
+        button(type="submit" class="ml-[-30px]" )
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white hover:text-indigo-300 mb-[-6px] ">
             <path stroke-linecap="round" stroke-linejoin="round" d="m15.75 15.75-2.489-2.489m0 0a3.375 3.375 0 1 0-4.773-4.773 3.375 3.375 0 0 0 4.774 4.774ZM21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
           </svg>
+        div(class="mb-6")
+          p(class="text-red-600 font-bold text-sm")=message
 
 
     div(class="overflow-x-auto")
@@ -38,10 +40,11 @@ block content
                   td(class="px-4 py-2")= client.address
                   td(class="px-4 py-2")= client.dateFormatted
                   td(class="px-4 py-2 flex flex-col gap-2 md:flex-row  md:gap-6")
-                    a(href=`/client/edit/${client.id}` class="text-yellow-300 hover:text-indigo-300")
+                    a(href=`/client/edit/${client.id}` class="loader text-yellow-300 hover:text-indigo-300")
                       svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
                         path(stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10")
-                    form(action="" method="")
+                    form(action=`/client/delete/${client.id}` method="POST" class="delete-form")
+                      input(type="hidden" name="_csrf" value=csrfToken)
                       button(type="submit" class="text-red-500 hover:text-red-700")
                         svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
                           path(stroke-linecap="round" stroke-linejoin="round" d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5m6 4.125 2.25 2.25m0 0 2.25 2.25M12 13.875l2.25-2.25M12 13.875l-2.25 2.25M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z")
@@ -51,13 +54,15 @@ block content
 
       //- Paginación -->
       if clients.length
-        div(class="flex justify-end mt-4 gap-6")
-          a(href="#" class="inline-block px-4 text-indigo-800 py-1 bg-indigo-400 hover:bg-indigo-600 hover:shadow-lg hover:shadow-gray-400 hover:text-white hover:scale-95 rounded-lg transition-all duration-400")
-            svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
-              path(stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18")
-
-          a(href="#" class="inline-block px-4 text-indigo-800 py-1 bg-indigo-400 hover:bg-indigo-600 hover:shadow-lg hover:shadow-gray-400 hover:text-white hover:scale-95 rounded-lg transition-all duration-400")
-            svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
-              path(stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3")
+        if totalPages > 1
+          div(class="flex justify-end mt-4 gap-6")
+            if currentPage > 1
+                a(href=`/client/panel?page=${currentPage - 1}` class="inline-block px-4 text-indigo-800 py-1 bg-indigo-400 hover:bg-indigo-600 hover:shadow-lg hover:shadow-gray-400 hover:text-white hover:scale-95 rounded-lg transition-all duration-400")
+                  svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
+                    path(stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18")
+            if currentPage < totalPages
+                a(href=`/client/panel?page=${currentPage + 1}` class="inline-block px-4 text-indigo-800 py-1 bg-indigo-400 hover:bg-indigo-600 hover:shadow-lg hover:shadow-gray-400 hover:text-white hover:scale-95 rounded-lg transition-all duration-400")
+                  svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
+                    path(stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3")
 
 
