Modificicando el diseño de la vista equipo

--- a/views/device/create.pug
+++ b/views/device/create.pug
@@ -1,41 +1,41 @@
 extends ../layouts/admin
 
 block content
-    div(class="max-w-4xl mx-auto bg-gray-800 p-8 rounded-lg shadow-lg")
-        h2(class="text-base md:text-2xl font-bold text-center text-white mb-8") Registro de Equipo
-        form(action="" method="" class="grid grid-rows-auto gap-6 ")
-            div(class="grid grid-cols-1 md:grid-cols-3 gap-6")
-              div 
-                label(for="client_id" class="block text-white font-semibold mb-2") Cliente
-                select(name="client_id" id="client_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
-                    option(value="") -- Selecciona un cliente --
-              div 
-                label(for="brand_id" class="block text-white font-semibold mb-2") Marca Equipo
-                select(name="brand_id" id="brand_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
-                    option(value="") -- Selecciona una marca --
-              div 
-                label(for="model_id" class="block text-white font-semibold mb-2") Model Equipo
-                select(name="model_id" id="model_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
-                    option(value="") -- Selecciona un modelo --
+  div(class="max-w-4xl mx-auto bg-gray-800 p-8 rounded-lg shadow-lg")
+    h2(class="text-base md:text-2xl font-bold text-center text-white mb-8") Registro de Equipo
+    form(action="" method="" class="grid grid-rows-auto gap-6 ")
+      div(class="grid grid-cols-1 md:grid-cols-3 gap-6")
+        div 
+          label(for="client_id" class="block text-white font-semibold mb-2") Cliente
+          select(name="client_id" id="client_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
+            option(value="") Selecciona un cliente
+        div 
+          label(for="brand_id" class="block text-white font-semibold mb-2") Marca Equipo
+          select(name="brand_id" id="brand_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
+            option(value="") Selecciona una marca
+        div 
+          label(for="model_id" class="block text-white font-semibold mb-2") Model Equipo
+          select(name="model_id" id="model_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
+            option(value="") Selecciona un modelo
 
-            div(class="grid grid-cols-1 md:grid-cols-2 gap-6")
-              div 
-                label(for="issue_description" class="block text-white font-semibold mb-2") Falla del equipo
-                select(name="issue_description" id="issue_description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
-                    option(value="") -- Selecciona un Falla --
-              div 
-                label(for="serial_number" class="block text-white font-semibold mb-2") Serial del equipo
-                input(type="text" name="serial_number" id="serial_number" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600 " placeholder="Serial Ejemplo: 45NGFS88SE" )
-            div(class="grid grid-cols-1")
-                label(for="description" class="block text-white font-semibold mb-2") Descripción del equipo
-                textarea(name="description" id="description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600" placeholder="Descripción del equipo" maxLength="100")
-                p(id="count" class="count flex justify-end relative bottom-5  text-gray-400 text-xs mx-4") 0 / 100
+      div(class="grid grid-cols-1 md:grid-cols-2 gap-6")
+        div 
+          label(for="issue_description" class="block text-white font-semibold mb-2") Falla del equipo
+          select(name="issue_description" id="issue_description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600")
+            option(value="") Selecciona un Falla
+        div 
+          label(for="serial_number" class="block text-white font-semibold mb-2") Serial del equipo
+          input(type="text" name="serial_number" id="serial_number" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600 " placeholder="Serial Ejemplo: 45NGFS88SE" )
+      div(class="grid grid-cols-1")
+        label(for="description" class="block text-white font-semibold mb-2") Descripción del equipo
+        textarea(name="description" id="description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600" placeholder="Descripción del equipo" maxLength="100")
+        p(id="count" class="count flex justify-end relative bottom-5  text-gray-400 text-xs mx-4") 0 / 100
 
-            div(class="grid grid-cols-1")
-                label(for="imagen" class="block text-white font-semibold mb-2") Imagen del equipo
-                input(type="file" name="imagen" id="imagen" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600 cursor-progress")
-                    
-            div(class="flex flex-col md:flex-row gap-4 justify-center items-center mt-10")
-                button(type="button" id="cancelar-create" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-white text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
+      div(class="grid grid-cols-1")
+        label(for="imagen" class="block text-white font-semibold mb-2") Imagen del equipo
+        input(type="file" name="imagen" id="imagen" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-red-600 cursor-progress")
 
-                input(type="submit" class=" w-full md:w-3/6 cursor-pointer font-bold bg-gray-700 hover:bg-indigo-700 text-white text-sm md:text-xl rounded-lg shadow-lg hover:shadow-gray-700  hover:scale-90 p-[10px] transition-all duration-300" value="Ingresar Equipo")
+      div(class="flex flex-col md:flex-row gap-4 justify-center items-center mt-10")
+        button(type="button" id="cancelar-create" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-white text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
+
+        input(type="submit" class=" w-full md:w-3/6 cursor-pointer font-bold bg-gray-700 hover:bg-indigo-700 text-white text-sm md:text-xl rounded-lg shadow-lg hover:shadow-gray-700  hover:scale-90 p-[10px] transition-all duration-300" value="Ingresar Equipo")
