--- a/views/device/create.pug
+++ b/views/device/create.pug
@@ -52,6 +52,7 @@ block content
       div(class="grid grid-cols-1")
       div(class="grid grid-cols-1")
         label(for="description" class="block text-white font-semibold mb-2") Descripción del equipo
+          small.ml-2.text-gray-500 (Opcional)
         textarea(name="description" id="description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Descripción del equipo" maxLength="100")=device.description ? device.description : ""
         p(id="count" class="count flex justify-end relative bottom-5  text-gray-400 text-xs mx-4") 0 / 100
 
