Eliminando CSURF para le implementación de imagenes

--- a/views/layouts/admin.pug
+++ b/views/layouts/admin.pug
@@ -42,3 +42,4 @@ html(lang="en")
       script(src="/js/sweetAlert.js")
       script(src="/js/spinner.js")
       script(src="/js/inputs.js")
+      script(src="/js/csrfTokenHeaders.js")
