--- a/views/device/create.pug
+++ b/views/device/create.pug
@@ -2,9 +2,8 @@ extends ../layouts/admin
 
 block content
   div(class="max-w-4xl mx-auto bg-gray-800 p-8 rounded-lg shadow-lg")
-    h2(class="text-base md:text-4xl font-bold text-center text-white mb-12")=page
-    form(action="/device/create" method="POST" class="grid grid-rows-auto gap-6 ")
-      input(type="hidden" name="_csrf" value=csrfToken)
+    h2(class="text-base md:text-4xl font-bold text-center text-white mb-12 cssanimation hu__hu__")=page
+    form(action="/device/create" id="device-form" method="POST" enctype="multipart/form-data" class="grid grid-rows-auto gap-6 ")
       div(class="grid grid-cols-1 md:grid-cols-3 gap-6")
         div 
           label(for="client_id" class="block text-gray-300 font-semibold mb-2") Cliente
@@ -50,15 +49,18 @@ block content
             span(class="text-red-500 text-xs mx-2")=errors.serial_number ? errors.serial_number.msg : ""
 
       div(class="grid grid-cols-1")
-      div(class="grid grid-cols-1")
-        label(for="description" class="block text-gray-300 font-semibold mb-2") Descripción del equipo
-          small.ml-2.text-gray-500 (Opcional)
-        textarea(name="description" id="description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Descripción del equipo" maxLength="100")=device.description ? device.description : ""
-        p(id="count" class="count flex justify-end relative bottom-5  text-gray-400 text-xs mx-4") 0 / 100
+        div
+          label(for="description" class="block text-gray-300 font-semibold mb-2") Descripción del equipo
+            small.ml-2.text-gray-500 (Opcional)
+          textarea(name="description" id="description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Descripción del equipo" maxLength="100")=device.description ? device.description : ""
+          p(id="count" class="count flex justify-end relative bottom-5  text-gray-400 text-xs mx-4") 0 / 100
 
       div(class="grid grid-cols-1")
-        label(for="imagen" class="block text-gray-300 font-semibold mb-2") Imagen del equipo
-        input(type="file" name="imagen" id="imagen" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600 cursor-progress")
+        div
+          label(for="image" class="block text-gray-300 font-semibold mb-2") Imagen del equipo
+          input(type="file" name="image" id="image" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600 cursor-progress" multiple accept="image/*" value="")
+          if errors
+              span(class="text-red-500 text-xs mx-2")=errors.image ? errors.image.msg : ""
 
       div(class="flex flex-col md:flex-row gap-4 justify-center items-center mt-10")
         button(type="button" id="cancelar-create" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-gray-300 text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
